--- a/ReadME
+++ b/ReadME
@@ -1,2 +1,2 @@
 This is a sample version of my project simply to showcase my coding skills
-Some lines of codes and media sources are excluded
+Some lines of codes and all of the media sources are excluded
