--- a/ReadME
+++ b/ReadME
@@ -1,2 +1,2 @@
 This is a sample version of my project simply to showcase my coding skills
-Some lines of codes and all of the media sources are excluded
+A large portion of my codes and all of the media sources are excluded due to my plan on monetizing the project
