--- a/ReadME
+++ b/ReadME
@@ -1,2 +1,2 @@
-This is a sample version of my project simply to showcase my coding skills
-A large portion of my codes and all of the media sources are excluded due to my plan on monetizing the project
+This is a sampling of my coding as a means to showcase my coding style and skillsets.
+Please Note: A LARGE portion of my codes and ALL of the media sources are excluded due to my plan on monetizing the project
