--- a/ReadME
+++ b/ReadME
@@ -1,2 +1,2 @@
-This is a sampling of my coding as a means to showcase my coding style and skillsets.
+This is a small sample of the CyberTalk project to showcase my coding style and skillsets.
 Please Note: A LARGE portion of my codes and ALL of the media sources are excluded due to my plan on monetizing the project
