--- a/ReadME
+++ b/ReadME
@@ -1,2 +1,2 @@
-This is a sample of the whole project to showcase my coding skills.
-Large portion of my codes and all of the media files have been excluded at this time.
+This is only a sample of the whole project to showcase my coding skills.
+A large portion of the codes and all of the media files have been excluded at this time.
